--- a/registry/src/components/Select/index.css
+++ b/registry/src/components/Select/index.css
@@ -37,15 +37,15 @@
   @apply absolute right-0 top-0 flex aspect-auto h-full w-fit items-center justify-center p-3;
 }
 
-.dropdown.custom-select .dropdown-trigger {
+.menu.custom-select .menu-trigger {
   @apply h-full w-full rounded-md border border-gray-200 bg-white px-4 text-left text-gray-500 shadow-sm hover:text-gray-700;
 }
 
-.dropdown.custom-select .dropdown-trigger[data-open='true'] {
+.menu.custom-select .menu-trigger[data-open='true'] {
   @apply rounded-b-none;
 }
 
-.dropdown.custom-select .dropdown-content {
+.menu.custom-select .menu-content {
   @apply m-0 flex flex-col gap-1 rounded-t-none border border-t-0 border-gray-200 p-1;
 }
 
