update (menu): - Integrate floating-ui lib - Navigating through menu items via up/down keys - Control Menu visibility by isOpen state - Flexible valued control with MenuItem - Integrate with Portal by isPortal prop - Detached Menu and MenuTrigger components, communicate by id(MenuTrigger) and anchorId(Menu)

--- a/registry/src/components/Menu/index.css
+++ b/registry/src/components/Menu/index.css
@@ -128,7 +128,7 @@
 }
 
 /* Positions */
-.menu {
+/* .menu {
   @apply left-1/2 top-full my-2 -translate-x-1/2 transition-opacity duration-150;
 }
 
@@ -162,4 +162,4 @@
 
 .menu-divider {
   @apply h-px w-full shrink-0 bg-gray-200;
-}
+} */
