--- a/registry/src/components/Select/index.css
+++ b/registry/src/components/Select/index.css
@@ -4,6 +4,10 @@ select {
   @apply text-body-compact-02 m-0 w-full cursor-pointer appearance-none text-ellipsis rounded-md border border-gray-200 bg-white pl-4 pr-10;
 }
 
+select.non-value {
+  @apply text-gray-500;
+}
+
 select > option {
   @apply appearance-none rounded-none py-8 text-gray-950;
 }
@@ -59,20 +63,12 @@ select.large {
   @apply py-3;
 }
 
-/* Select */
-.select-wrapper {
-  @apply relative h-min w-full rounded-md border border-gray-200 transition-colors after:absolute after:right-0 after:top-0 after:h-full after:transform after:items-center after:bg-black after:transition;
+/* Custom Select */
+.input-wrapper .value-input-wrapper {
+  @apply flex flex-wrap items-center gap-1;
 }
 
-.select-wrapper.active {
-  @apply after:-scale-y-100;
-}
-
-.select-wrapper:not(.selected) {
-  @apply relative w-full rounded-md border border-gray-200 text-gray-500 after:bg-gray-500 hover:text-gray-700 after:hover:bg-gray-700;
-}
-
-.native-select.non-value {
+.input-wrapper .value-input-wrapper.non-value {
   @apply text-gray-500;
 }
 
@@ -86,30 +82,6 @@ select.large {
 
 .input-wrapper .right-element-container .arrow-select-btn.open {
   @apply -scale-y-100;
-}
-
-.select-item {
-  @apply relative h-full w-full cursor-pointer rounded-md p-3 text-gray-900 first:rounded-t-none hover:bg-gray-100;
-}
-
-.select-item.active {
-  @apply bg-blue-100;
-}
-
-.select-item .selected-icon {
-  @apply absolute right-0 top-0 flex aspect-auto h-full w-fit items-center justify-center p-3;
-}
-
-.menu.custom-select .menu-trigger {
-  @apply h-full w-full rounded-md border border-gray-200 bg-white px-4 text-left text-gray-500 shadow-sm hover:text-gray-700;
-}
-
-.menu.custom-select .menu-trigger[data-open='true'] {
-  @apply rounded-b-none;
-}
-
-.menu.custom-select .menu-content {
-  @apply m-0 flex flex-col gap-1 rounded-t-none border border-t-0 border-gray-200 p-1;
 }
 
 /* Select */
