--- a/registry/src/components/Select/index.css
+++ b/registry/src/components/Select/index.css
@@ -12,6 +12,10 @@ select > option {
   @apply appearance-none rounded-none py-8 text-gray-950;
 }
 
+select.native-select ~ .right-element-container {
+  @apply pointer-events-none;
+}
+
 select:focus {
   outline-offset: 0;
   border-radius: 0.375rem;
@@ -65,19 +69,19 @@ select.large {
 
 /* Custom Select */
 .input-wrapper .value-input-wrapper {
-  @apply flex flex-wrap items-center gap-1;
+  @apply flex max-w-full items-center;
 }
 
 .input-wrapper .value-input-wrapper.non-value {
   @apply text-gray-500;
 }
 
-.input-wrapper .right-element-container .arrow-select-btn {
-  @apply transition-all duration-150 ease-in-out;
+.input-wrapper .value-input-wrapper .chips-container {
+  @apply flex w-fit flex-row gap-1;
 }
 
-.right-element-container:has(.arrow-select-btn) {
-  @apply pointer-events-none select-none;
+.input-wrapper .right-element-container .arrow-select-btn {
+  @apply transition-all duration-150 ease-in-out;
 }
 
 .input-wrapper .right-element-container .arrow-select-btn.open {
