feat (switch): - add base - add sizes - add icon feature - add swipe handler for mobile - add controlled behaviour

--- a/registry/src/components/global.css
+++ b/registry/src/components/global.css
@@ -1,6 +1,6 @@
 *:focus-visible,
 *[data-focus-visible='true'] {
-  outline: 2px solid black;
+  outline: 2px solid rgba(22, 22, 22, 1);
   outline-offset: -2px; /* overide border */
 }
 
